Fix some spacing that happens on mobiles

--- a/src/containers/app/app.css
+++ b/src/containers/app/app.css
@@ -1,4 +1,3 @@
 .app-container {
   min-height: calc(100vh - 120px);
-  padding-bottom: 100px;
 }
