--- a/src/containers/expenditure/expenditure.css
+++ b/src/containers/expenditure/expenditure.css
@@ -11,9 +11,15 @@
   margin-bottom: 5px;
 }
 
-.expenditure-container i {
+.expenditure-container button {
   color: red;
   position: absolute;
   right: 15px;
   top: 15px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.expenditure-container button:hover {
+  cursor: pointer;
 }
