--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -1,5 +1,5 @@
 .home-container {
-  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
 }
 
 .home-summary {
