--- a/src/containers/measures/measures.css
+++ b/src/containers/measures/measures.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
+  padding-bottom: 70px;
 }
 
 .measures-form {
